# DataMate

./: .dockerignore  .gitignore  .sops.yaml  ARCHITECTURE-zh.md  ARCHITECTURE.md  DEVELOPMENT-zh.md  DEVELOPMENT.md  LICENSE  Makefile  README-zh.md  README.md  package-lock.json
runtime/ops/: README.md  pyproject.toml  requirements.txt
runtime/ops/annotation/: __init__.py
runtime/ops/annotation/image_object_detection_bounding_box/: __init__.py  metadata.yml  process.py  test_detection.py
runtime/ops/annotation/image_semantic_segmentation/: process.py
runtime/ops/examples/test_operator/: README.md  __init__.py  metadata.yml  process.py  requirements.txt  test_operator.tar
runtime/ops/filter/: __init__.py
runtime/ops/filter/file_with_high_repeat_phrase_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/file_with_high_repeat_word_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/file_with_high_special_char_rate_filter/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_advertisement_images_cleaner/: __init__.py  metadata.yml  process.py  wechat_qrcode_model.py
runtime/ops/filter/img_blurred_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_duplicated_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/img_similar_images_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_duplicate_file/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_file_with_many_sensitive_words/: __init__.py  metadata.yml  process.py
runtime/ops/filter/remove_file_with_short_or_long_length/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/: __init__.py
runtime/ops/formatter/mineru_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/formatter/slide_formatter/: __init__.py  metadata.yml  process.py
runtime/ops/histoqc_op/: _init_.py  metadata.yml  process.py
runtime/ops/llms/: __init__.py
runtime/ops/llms/qa_condition_evaluator/: __init__.py  metadata.yml  process.py
runtime/ops/llms/text_quality_evaluation/: __init__.py  constant.py  metadata.yml  process.py  prompt_config.py
runtime/ops/mapper/: README_video_ops.md  __init__.py  audio_ops_manual_test_steps.md  audio_runtime_dependencies.md  audio_runtime_requirements.txt
runtime/ops/mapper/_video_common/: README_models.md  README_qwen_service.md  ffmpeg.py  io_video.py  log.py  model_paths.py  params.py  paths.py  qwen_http_client.py  schema.py
runtime/ops/mapper/audio_anomaly_filter/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_asr_pipeline/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_asr_transcribe/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_dc_offset_removal/: README.md  __init__.py  audio_skip.py  metadata.yml  process.py
runtime/ops/mapper/audio_emotion_recognize/: README.md  __init__.py  audio_skip.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_fast_lang_id/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_fast_lang_id_text/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_format_convert/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_gtcrn_denoise/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_hum_notch/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_noise_gate/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_pre_emphasis/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_quantize_encode/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_rms_loudness_normalize/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_simple_agc/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_soft_peak_limiter/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_sound_classify/: README.md  __init__.py  audio_skip.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_telephony_bandpass/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_test_emotion_result_validation/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/audio_text_summarize/: README.md  __init__.py  metadata.yml  process.py  requirements.txt
runtime/ops/mapper/audio_trim_silence_edges/: README.md  __init__.py  metadata.yml  process.py
runtime/ops/mapper/content_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/credit_card_number_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/data_quality_evaluator/: README.md
runtime/ops/mapper/data_synthesis/: README.md  benchmark_and_visualize.py  data_evaluator.py  data_synthesizer.py  download.py  final_delivery_part1.py  requirement_metrics.py  run_50_each_test.py  test_project_requirements.py  verify_evaluator.py
runtime/ops/mapper/email_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/emoji_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/extra_space_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/full_width_characters_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/garble_characters_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/html_tag_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/id_number_cleaner/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_denoise/: __init__.py  metadata.yml  process.py
runtime/ops/mapper/img_direction_correct/: __init__.py  base_model.py  metadata.yml  process.py
runtime/ops/mapper/img_enhanced_brightness/: __init__.py  metadata.yml  process.py
runtime/ops/slicer/: __init__.py
runtime/ops/user/: __init__.py
(+2524 files in other folders)
