[project]
name = "ops"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasketch>=1.8.0",
    "email-validator>=2.3.0",
    "emoji>=2.15.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "mineru>=2.6.5",
    "numpy>=2.2.6",                  # 兼容原有和新增的 2.4.1
    "python-multipart>=0.0.20",
    "opencv-contrib-python-headless>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88", # Headless 版本适合服务器/容器
    "openslide-python>=1.4.3",
    "paddleocr>=2.7.0",              # 改为范围匹配
    "paddlepaddle>=2.5.0",           # 改为范围匹配
    "pandas>=2.2.3",
    "presidio-analyzer==2.2.25",
    "presidio-anonymizer==2.2.25",
    "pycryptodome>=3.23.0",
    "python-docx>=1.2.0",            # 已合并
    "pytz>=2025.2",
    "six>=1.17.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.44",
    "xmltodict>=1.0.2",
    "zhconv>=1.4.3",
    "ultralytics>=8.0.0",
    "pyyaml>=6.0",                   # 新增
    "requests>=2.31.0",              # 新增
]

# 可选安装依赖组
# 使用方法: pip install ".[extra]"
[project.optional-dependencies]
extra = [
    "docx2pdf>=0.1.8",
    "faker>=30.8.0",
    "PyMuPDF>=1.23.8",
    "Pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "docxtpl>=0.20.2",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.2",
]
