[project]
name = "ops"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasketch>=1.8.0",
    "email-validator>=2.3.0",
    "emoji>=2.15.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "mineru>=2.6.5",
    "numpy>=2.2.6",
    "python-multipart>=0.0.20",
    "opencv-contrib-python-headless>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "paddleocr==3.3.0",
    "paddlepaddle==3.2.2",
    "pandas>=2.2.3,<3.0.0",
    "presidio-analyzer==2.2.25",
    "presidio-anonymizer==2.2.25",
    "pycryptodome>=3.23.0",
    "python-docx>=1.2.0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.44",
    "xmltodict>=1.0.2",
    "zhconv>=1.4.3",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aistudio-sdk==0.3.8",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asc_opc_tool",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "auto_tune",
    "av==15.1.0",
    "bce-python-sdk==0.9.60",
    "certifi==2026.2.25",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "colorlog==6.10.1",
    "contourpy==1.3.0",
    "ctranslate2==4.7.1",
    "cycler==0.12.1",
    "dataflow",
    "datasets==4.5.0",
    "dill==0.4.0",
    "exceptiongroup==1.3.1",
    "faster-whisper==1.2.1",
    "filelock==3.19.1",
    "flatbuffers==25.12.19",
    "fonttools==4.60.2",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "future==1.0.0",
    "h11==0.16.0",
    "hccl",
    "hccl_parser",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.7.2",
    "humanfriendly==10.0",
    "idna==3.11",
    "imagesize==1.5.0",
    "importlib_resources==6.5.2",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.7",
    "lap==0.5.13",
    "llm_datadist",
    "llm_datadist_v1",
    "llvmlite==0.43.0",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.9.4",
    "mdurl==0.1.2",
    "modelscope==1.34.0",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msobjdump",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "networkx==3.2.1",
    "numba==0.60.0",
    "onnxruntime==1.19.2",
    "op_compile_tool",
    "op_gen",
    "op_test_frame",
    "opc_tool",
    "openai-whisper==20250625",
    "opencc-python-reimplemented==0.1.7",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.13.0.92",
    "opt-einsum==3.3.0",
    "packaging==26.0",
    "paddlex==3.4.2",
    "pillow==11.3.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "prettytable==3.16.0",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "pyarrow==21.0.0",
    "pyclipper==1.3.0.post6",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "pypdfium2==5.5.0",
    "python-bidi==0.6.7",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.2",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich==14.3.3",
    "ruamel.yaml==0.19.1",
    "safetensors==0.7.0",
    "schedule_search",
    "scipy==1.13.1",
    "shapely==2.0.7",
    "shellingham==1.5.4",
    "show_kernel_debug_data",
    "sympy==1.14.0",
    "te",
    "tiktoken==0.12.0",
    "tokenizers==0.22.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.3",
    "typer==0.23.2",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "ujson==5.11.0",
    "ultralytics==8.4.19",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "accelerate==1.12.0",
    "blinker==1.9.0",
    "Flask==3.1.3",
    "itsdangerous==2.2.0",
    "qwen-vl-utils==0.0.14",
    "torch_npu==2.9.0",
    "transformers==5.2.0",
    "typer-slim==0.24.0",
    "Werkzeug==3.1.6",
    "_libgcc_mutex==0.1",
    "_openmp_mutex==5.1",
    "aom==3.9.1",
    "bzip2==1.0.8",
    "ca-certificates==2026.2.25",
    "cairo==1.18.4",
    "dav1d==1.2.1",
    "expat==2.7.4",
    "ffmpeg==7.1.0",
    "font-ttf-dejavu-sans-mono==2.37",
    "font-ttf-inconsolata==3.000",
    "font-ttf-source-code-pro==2.038",
    "font-ttf-ubuntu==0.83",
    "fontconfig==2.15.0",
    "fonts-conda-ecosystem==1",
    "fonts-conda-forge==1",
    "freetype==2.14.1",
    "fribidi==1.0.16",
    "gdk-pixbuf==2.42.12",
    "gmp==6.3.0",
    "graphite2==1.3.14",
    "harfbuzz==12.3.0",
    "icu==73.2",
    "lame==3.100",
    "ld_impl_linux-aarch64==2.44",
    "lerc==4.0.0",
    "libabseil==20240722.0",
    "libass==0.17.3",
    "libdeflate==1.22",
    "libexpat==2.7.4",
    "libffi==3.4.4",
    "libfreetype==2.14.1",
    "libfreetype6==2.14.1",
    "libgcc==15.2.0",
    "libgcc-ng==15.2.0",
    "libglib==2.86.3",
    "libgomp==15.2.0",
    "libhwloc==2.12.1",
    "libiconv==1.18",
    "libjpeg-turbo==3.1.2",
    "libnsl==2.0.0",
    "libopenvino==2024.4.0",
    "libopenvino-arm-cpu-plugin==2024.4.0",
    "libopenvino-auto-batch-plugin==2024.4.0",
    "libopenvino-auto-plugin==2024.4.0",
    "libopenvino-hetero-plugin==2024.4.0",
    "libopenvino-ir-frontend==2024.4.0",
    "libopenvino-onnx-frontend==2024.4.0",
    "libopenvino-paddle-frontend==2024.4.0",
    "libopenvino-pytorch-frontend==2024.4.0",
    "libopenvino-tensorflow-frontend==2024.4.0",
    "libopenvino-tensorflow-lite-frontend==2024.4.0",
    "libopus==1.6.1",
    "libpng==1.6.55",
    "libprotobuf==5.28.2",
    "librsvg==2.58.4",
    "libstdcxx==15.2.0",
    "libstdcxx-ng==15.2.0",
    "libtiff==4.7.0",
    "libuuid==1.41.5",
    "libvpx==1.14.1",
    "libwebp-base==1.6.0",
    "libxcb==1.17.0",
    "libxml2==2.13.9",
    "libzlib==1.3.1",
    "ncurses==6.5",
    "openh264==2.5.0",
    "openssl==3.6.1",
    "pango==1.56.4",
    "pcre2==10.46",
    "pip==26.0.1",
    "pixman==0.46.4",
    "pthread-stubs==0.3",
    "pugixml==1.14",
    "readline==8.3",
    "setuptools==80.9.0",
    "snappy==1.2.2",
    "sqlite==3.51.1",
    "svt-av1==2.3.0",
    "tbb==2022.3.0",
    "tk==8.6.15",
    "wheel==0.45.1",
    "x264==1!164.3095",
    "x265==3.5",
    "xorg-libx11==1.8.12",
    "xorg-libxau==1.0.12",
    "xorg-libxdmcp==1.1.5",
    "xorg-libxext==1.3.7",
    "xorg-libxrender==0.9.12",
    "xorg-xorgproto==2024.1",
    "xz==5.6.4",
    "zlib==1.3.1",
    "zstd==1.5.7",
    "layoutparser==0.3.4",
    "pdf2image==1.17.0",
    "pytesseract==0.3.13",
    "timm==1.0.24",
    "unstructured==0.11.0",
    "unstructured-inference==0.7.15",
    "vllm==0.13.0",
    "vllm-ascend==0.13.0",
    "openslide-python==1.4.2",
    "joblib==1.5.3",
    "scikit-learn==1.6.1",
    "openpyxl",
    "albumentations",
    "SimpleITK",
    "scikit-image",
    "natsort",
    "torchinfo",
    "sentence-transformers==5.1.2",
    "faiss-cpu==1.13.0",
    "pycorrector==1.1.3",
    "deepspeed==0.13.2",
    "einops==0.7.0",
    "hyperpyyaml==1.2.2",
    "langid==1.1.6",
    "librosa==0.10.2.post1",
    "ptflops==0.7",
    "pydub==0.25.1",
    "sentencepiece==0.1.99",
    "soundfile==0.12.1",
    "speechbrain==1.0.3",
    "tensorboard==2.16.2",
    "tensorboardX==2.6.2.2",
    "textgrid==1.6.1",
    "torchaudio==2.2.0",
    "torchlibrosa==0.0.4",
    "imageio-ffmpeg>=0.6.0",
]
